# KritaShellExtension

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING.txt  COPYING_libzip.txt  COPYING_tinyxml2.txt  COPYING_zlib.txt  KritaShellExtension.sln  README.md  build-msvc2015.cmd
KritaShellExtension/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  ExportFunctions.def  KritaPropertyHandler.cpp  KritaPropertyHandler.h  KritaShellExtension.rc  KritaShellExtension.vcxproj  KritaShellExtension.vcxproj.filters  KritaThumbnailProvider.cpp  KritaThumbnailProvider.h  dllmain.cpp  dllmain.h  document.cpp  document.h  resource.h  zip_source_IStream.cpp  zip_source_IStream.h
installer/: test-installer.wxs
installer/nsis/: constants.nsh  installer.nsi  installer_krita.nsi  installer_shellex.nsi  krita_shell_integration.nsh  krita_versions_detect.nsh  license.rtf  license_gpl-2.0.rtf  readme.txt
installer/nsis/include/: FileExists2.nsh  KritaConfigPage.nsh
